--- a/test.ipynb
+++ b/test.ipynb
@@ -2,14 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "furnished-national",
+   "execution_count": 1,
+   "id": "fewer-wings",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
+    }
+   ],
    "source": [
     "x = 3 + 4\n",
-    "y "
+    "y = 5 + 6\n",
+    "z = x + y\n",
+    "print(z)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "documentary-penalty",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
